# Helmet_Detection

./: .gitignore  Project_YOLOv10_Image_Dectection.ipynb  README.md  pyproject.toml  requirements.txt
src/safety_helmet_detection/: __init__.py  cli.py  config.py  yolo_pipeline.py
